--- a/css/rsp777_hiscore-119.css
+++ b/css/rsp777_hiscore-119.css
@@ -1,714 +1,1 @@
-/*
-
-
-
-*/
-
-.hiscoretitlebground,
-.titleBackground {
-    margin-left: auto;
-    margin-right: auto;
-    padding: 4px;
-    width: 759px;
-    height: 130px;
-    background-image: url(../img/rsp777/hiscores/hiscores_title.gif);
-    background-repeat: no-repeat;
-    background-position: top;
-}
-
-.hiscoretitleframe {
-    position: relative;
-    width: 165px;
-    top: 20px;
-    padding-right: 0px;
-    padding-left: 0px;
-    padding-top: 2px;
-    padding-bottom: 2px;
-    text-align: center;
-    border: 2px solid #382418;
-    background-color: black;
-    margin: 15px auto 0;
-}
-
-.hiscorebutton {
-    height: 98px;
-    width: 152px;
-    text-align: center;
-    margin: 1px 1px 1px 26px;
-    display: block;
-    color: #D9C27E;
-    background-image: url(../img/rsp777/hiscores/search_box.gif);
-    background-repeat: no-repeat;
-    padding: 2px 3px;
-    line-height: 30px;
-}
-
-.hiscoremediumbutton {
-    height: 124px;
-    width: 152px;
-    text-align: center;
-    margin: 1px 1px 1px 26px;
-    display: block;
-    color: #D9C27E;
-    background-position: top center;
-    background-repeat: no-repeat;
-    background-image: url(../img/rsp777/hiscores/friends_hiscores.gif);
-    padding: 2px 3px;
-    line-height: 12px;
-}
-
-.hiscorelargebutton {
-    height: 126px;
-    width: 152px;
-    text-align: center;
-    margin: 1px 1px 1px 26px;
-    display: block;
-    color: #D9C27E;
-    background-position: top center;
-    background-repeat: no-repeat;
-    background-image: url(../img/rsp777/hiscores/compare_users.gif);
-    padding: 2px 3px;
-    line-height: 35px;
-}
-
-.hiscorecomparebutton {
-    height: 79px;
-    width: 444px;
-    text-align: center;
-    margin: 6px;
-    color: #D9C27E;
-    background: url(../img/rsp777/hiscores/compare_button_wide.gif) no-repeat top center;
-    padding: 5px 3px;
-    line-height: 20px;
-}
-
-.hiscorelinkbutton {
-    height: 79px;
-    width: 152px;
-    text-align: center;
-    margin: 6px;
-    padding: 5px 3px;
-    line-height: 20px;
-    background: url(../img/rsp777/hiscores/compare_button_small.gif) no-repeat top center;
-}
-
-.raisepage {
-    position: relative;
-    top: -70px;
-}
-
-img.miniimg {
-    height: 16px;
-    width: 16px;
-}
-
-.forcelighttext {
-    color: #D9C27E;
-}
-
-div.hiscorecomparebutton b {
-    color: #D9C27E;
-}
-
-div.hiscorelinkbutton b {
-    color: #D9C27E;
-    line-height: 14px;
-}
-
-div.widescroll-content a {
-    color: #000000;
-    font-weight: bold;
-}
-
-div.widescroll-content td {
-    color: #000000;
-}
-
-div.banner {
-    width: 175px;
-    position: relative;
-    background-image: url(../img/rsp777/hiscores/banner_middle2.gif);
-    background-position: left;
-    background-repeat: repeat-y;
-}
-
-div.banner-content {
-    margin: 0 0 0 9px;
-    z-index: 100;
-    padding: 0px 20px;
-    color: #000000;
-    position: relative;
-}
-
-img.banner-top {
-    background-position: center;
-    position: relative;
-    top: 15px;
-    padding: 0;
-    margin: 0;
-    display: block;
-}
-
-img.banner-bottom {
-    background-position: center;
-    position: relative;
-    padding: 0;
-    margin: 0;
-    top: 0px;
-    display: block;
-}
-
-div.banner-content a {
-    color: #D9C27E;
-}
-
-div.mainscroll-bgimg {
-    width: 379px;
-    position: relative;
-    margin: 0 -5px;
-    background-image: url(../img/rsp777/hiscores/scroll_middle.gif);
-    background-repeat: repeat-y;
-}
-
-div.mainscroll-bg {
-    width: 372px;
-    background-color: #C2AB79;
-    margin-left: 5px;
-}
-
-div.mainscroll-content {
-    padding: 25px 0px;
-    color: #000000;
-    position: relative;
-    margin: 0 0px;
-}
-
-div.mainscroll-content td {
-    color: black;
-}
-
-div.mainscroll-content a {
-    color: #000000;
-}
-
-img.mainscroll-top {
-    position: relative;
-    top: 25px;
-    padding: 0;
-    margin: 0;
-    z-index: 100;
-    display: block;
-}
-
-img.mainscroll-bottom {
-    position: relative;
-    padding: 0;
-    margin: 0;
-    top: -25px;
-    display: block;
-}
-
-#col1, #col2, #col3 {
-
-}
-
-.twisted-blurb {
-    background: #000;
-    border: 2px solid #567330;
-    margin: 15px auto;
-    padding: 5px;
-    width: 720px;
-}
-
-/* col1 */
-#col1 {
-    width: 175px;
-}
-
-#headerCategory {
-    background: url(../img/rsp777/hiscores/banner_top2.gif) no-repeat;
-    width: 186px;
-    height: 90px;
-}
-
-#footerCategory {
-    background: url(../img/rsp777/hiscores/banner_bottom2.gif) no-repeat;
-    width: 186px;
-    height: 60px;
-}
-
-#contentCategory {
-    background: url(../img/rsp777/hiscores/banner_middle2.gif) repeat-y;
-    margin: 0;
-    max-width: 157px;
-    max-height: 600px;
-    /* allow scrolling vertically but hide the scroll bar*/
-    -ms-overflow-style: none;
-    overflow-x: hidden; /* Separate values used to cover bugs with Safari and Firefox */
-    overflow-y: -moz-scrollbars-none;
-    overflow-y: scroll;
-}
-
-/*Hide the scroll bar so the ui will look better on Windows*/
-#contentCategory::-webkit-scrollbar {
-    width: 0 !important;
-}
-
-.personal-hiscores__scroll-arrow {
-    background: url(../img/rsp777/hiscores/banner_middle2.gif) repeat-y;
-    color: transparent;
-    cursor: pointer;
-    display: block;
-    max-width: 157px;
-    overflow: hidden;
-    position: relative;
-    user-select: none;
-}
-
-.personal-hiscores__scroll-arrow::after {
-    border-left: 40px solid transparent;
-    border-right: 40px solid transparent;
-    content: '';
-    left: 50px;
-    position: absolute;
-    top: 2px;
-}
-
-.personal-hiscores__scroll-arrow--up::after {
-    border-bottom: 10px solid #baa471;
-}
-
-.personal-hiscores__scroll-arrow--down::after {
-    border-top: 10px solid #baa471;
-}
-
-.personal-hiscores__scroll-arrow:hover::after {
-    filter: brightness(1.3);
-}
-
-.personal-hiscores__scroll-arrow--disabled {
-    cursor: not-allowed;
-}
-
-.personal-hiscores__scroll-arrow--disabled::after {
-    filter: opacity(0.3);
-}
-
-.personal-hiscores__scroll-arrow--disabled:hover::after {
-    filter: opacity(0.3);
-}
-
-
-#contentCategory a {
-    position: relative;
-    color: #d9c27e;
-    padding: 3px 0 0 20px;
-    margin-left: 34px;
-    display: block;
-}
-
-#contentCategory a.activity-link {
-    background: url(../img/rsp777/minigame_icon_hs_thumb.png) no-repeat left center;
-}
-
-#contentCategory a:before {
-    height: 18px;
-    width: 18px;
-    position: absolute;
-    left: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    background: linear-gradient(to right, #3c424d, #333840);
-}
-
-#contentCategory ul {
-    margin: 0px 25px 0px 50px;
-}
-
-#contentCategory li {
-    background: none;
-}
-
-#contentCategory li a {
-    padding-left: 10px;
-}
-
-/* xcol1 */
-/* col2 */
-#col2 {
-    width: 380px;
-    margin: 10px 15px 0px 5px;
-}
-
-#headerHiscores {
-    background: url(../img/rsp777/hiscores/scroll_top.gif) no-repeat;
-    width: 379px;
-    height: 36px;
-}
-
-.hiscoresHiddenBG {
-    width: 372px;
-    background: #c2ab79;
-    margin-left: 5px;
-}
-
-#contentHiscores {
-    width: 379px;
-    position: relative;
-    background: url(../img/rsp777/hiscores/scroll_middle.gif) repeat-y;
-    margin: 0 -5px;
-    line-height: 18px;
-    color: #000;
-}
-
-th, td {
-    color: #000;
-}
-
-#contentHiscores a {
-    color: #000;
-}
-
-#footerHiscores {
-    background: url(../img/rsp777/hiscores/scroll_bottom.gif) no-repeat;
-    width: 379px;
-    height: 36px;
-}
-
-#contentHiscores caption {
-    font-weight: bold;
-    color: #000;
-}
-
-/* xcol2 */
-/* col3 */
-#col3 {
-    width: 155px;
-}
-
-.smallBox {
-    background: url(../img/rsp777/hiscores/search_box.gif) no-repeat;
-    height: 98px;
-}
-
-.largeBox {
-    background: url(../img/rsp777/hiscores/compare_users.gif) no-repeat;
-    height: 126px;
-
-}
-
-/* xcol3 */
-/* boxes */
-.smallBox p, .largeBox p {
-    padding-top: 5px;
-}
-
-.smallBox, .largeBox {
-    width: 152px;
-    text-align: center;
-    color: #d9c27e;
-    margin-bottom: 25px;
-}
-
-.smallBox b, .largeBox b {
-    display: block;
-    margin: 5px;
-}
-
-.smallBox input.text, .largeBox input.text {
-    width: 100px;
-    margin-bottom: 4px;
-}
-
-/* xboxes */
-/* general */
-.left {
-    text-align: left;
-    margin-right: auto;
-}
-
-.right {
-    text-align: right;
-    margin-left: auto;
-}
-
-.center {
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.clear {
-    clear: both;
-}
-
-/* xgeneral */
-
-/* icons*/
-.Attack {
-    background: url(../img/rsp777/hiscores/skill_icon_attack1.gif) no-repeat;
-}
-
-.Defence {
-    background: url(../img/rsp777/hiscores/skill_icon_defence1.gif) no-repeat;
-}
-
-.Strength {
-    background: url(../img/rsp777/hiscores/skill_icon_strength1.gif) no-repeat;
-}
-
-.Hitpoints {
-    background: url(../img/rsp777/hiscores/skill_icon_hitpoints1.gif) no-repeat;
-}
-
-.Ranged {
-    background: url(../img/rsp777/hiscores/skill_icon_ranged1.gif) no-repeat;
-}
-
-.Prayer {
-    background: url(../img/rsp777/hiscores/skill_icon_prayer1.gif) no-repeat;
-}
-
-.Magic {
-    background: url(../img/rsp777/hiscores/skill_icon_magic1.gif) no-repeat;
-}
-
-.Cooking {
-    background: url(../img/rsp777/hiscores/skill_icon_cooking1.gif) no-repeat;
-}
-
-.Woodcutting {
-    background: url(../img/rsp777/hiscores/skill_icon_woodcutting1.gif) no-repeat;
-}
-
-.Fletching {
-    background: url(../img/rsp777/hiscores/skill_icon_fletching1.gif) no-repeat;
-}
-
-.Fishing {
-    background: url(../img/rsp777/hiscores/skill_icon_fishing1.gif) no-repeat;
-}
-
-.Firemaking {
-    background: url(../img/rsp777/hiscores/skill_icon_firemaking1.gif) no-repeat;
-}
-
-.Crafting {
-    background: url(../img/rsp777/hiscores/skill_icon_crafting1.gif) no-repeat;
-}
-
-.Smithing {
-    background: url(../img/rsp777/hiscores/skill_icon_smithing1.gif) no-repeat;
-}
-
-.Mining {
-    background: url(../img/rsp777/hiscores/skill_icon_mining1.gif) no-repeat;
-}
-
-.Herblore {
-    background: url(../img/rsp777/hiscores/skill_icon_herblore1.gif) no-repeat;
-}
-
-.Agility {
-    background: url(../img/rsp777/hiscores/skill_icon_agility1.gif) no-repeat;
-}
-
-.Thieving {
-    background: url(../img/rsp777/hiscores/skill_icon_thieving1.gif) no-repeat;
-}
-
-.Slayer {
-    background: url(../img/rsp777/hiscores/skill_icon_slayer1.gif) no-repeat;
-}
-
-.Farming {
-    background: url(../img/rsp777/hiscores/skill_icon_farming1.gif) no-repeat;
-}
-
-.Runecraft {
-    background: url(../img/rsp777/hiscores/skill_icon_runecraft1.gif) no-repeat;
-}
-
-.Hunter {
-    background: url(../img/rsp777/hiscores/skill_icon_hunter1.gif) no-repeat;
-}
-
-.Construction {
-    background: url(../img/rsp777/hiscores/skill_icon_construction1.gif) no-repeat;
-}
-
-/* xicons*/
-
-#hiscoreLoginLink {
-    display: block;
-    margin-top: 10px;
-}
-
-.hiscoreLoginForm {
-    padding: 5px;
-}
-
-.hiscoreLoginForm input {
-    width: 100px;
-    margin-bottom: 4px;
-}
-
-.hiscoreLoginForm label {
-    display: block;
-    font-weight: bold;
-    margin-bottom: 3px;
-}
-
-.hiscoreLoginForm .PasswordLink {
-    display: block;
-    font-size: 11px;
-}
-
-.loginPrompt,
-.linkToFriends {
-    padding-top: 5px;
-    display: block
-}
-
-.error {
-    color: red;
-    font-size: 1.2em;
-    text-align: center;
-    border: 1px solid red;
-    border-radius: 12px;
-    box-shadow: 0 0 4px red;
-    width: 600px;
-    margin: 0 auto;
-}
-
-.ironman-nav {
-    width: 800px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.ironman-nav__option {
-    background: black;
-    border: 2px solid #382418;
-    display: inline-block;
-    padding: 7px 15px;
-    margin-right: 5px;
-    cursor: pointer;
-}
-
-.ironman-nav__option--current {
-    color: #fff;
-    font-weight: 700;
-}
-
-.personal-hiscores {
-    display: table;
-    position: relative;
-    width: 600px;
-}
-
-.personal-hiscores__side-banner {
-    display: table-cell;
-    padding: 0 4px;
-    text-align: left;
-    vertical-align: top;
-    width: 175px;
-}
-
-.personal-hiscores__table {
-    display: table-cell;
-    vertical-align: top;
-}
-
-.personal-hiscores__table table { /*Specificity class*/
-    margin-right: 30px;
-    border-spacing: 0;
-}
-
-.personal-hiscores__table td { /*Specificity class*/
-    position: relative;
-    padding: 1.5px;
-}
-
-.personal-hiscores__pagination {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    justify-content: center;
-    position: absolute;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 30px;
-}
-
-.personal-hiscores__no-rank {
-    font-weight: bold;
-    margin-bottom: 0;
-    padding-bottom: 20px;
-    text-align: center;
-}
-
-.personal-hiscores__row--dead {
-    text-decoration: line-through;
-}
-
-.personal-hiscores__row--type-highlight {
-    background: rgba(144,192,64,.4);
-    font-weight: 600;
-}
-
-.hiscore-death {
-    cursor: help;
-    height: 15px;
-    right: 0;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 15px;
-}
-
-/* Dulicated styles from _os_hiscores.scss, don't forget to adjust styles in both files */
-.ironman-nav__group {
-    position: relative;
-    display: flex;
-}
-
-.ironman-nav__group:hover .ironman-nav__submenu {
-    display: flex;
-}
-
-.ironman-nav__option--parent {
-    cursor: pointer;
-}
-
-.ironman-nav__option--parent::after {
-    content: "";
-    clip-path: polygon(0% 0%, 50% 100%, 100% 0%);
-    background: currentColor;
-    display: inline-block;
-    height: 6px;
-    width: 6px;
-    margin-left: 1px;
-}
-
-.ironman-nav__submenu {
-    display: none;
-    flex-direction: column;
-    padding: 2px 0;
-    position: absolute;
-    left: 0;
-    top: 100%;
-    z-index: 10;
-}
-
-.ironman-nav__submenu .ironman-nav__option {
-    white-space: nowrap;
-    text-align: left;
-}
-
-.ironman-nav__submenu .ironman-nav__option + .ironman-nav__option {
-    border-top: none;
-}
+nav{background-color:var(--bg-color);border:2px solid var(--border-color);flex-direction:row;gap:10px;padding:10px;display:flex}a{color:var(--action-color);text-decoration:none}a:hover{text-decoration:underline}.Pcwi7a_active{color:#fff!important}.bY0ouG_mainContainer{flex-direction:column;width:100%;max-width:600px;margin-top:10px;display:flex}.bY0ouG_middleContainer{background-image:url(scroll_mid.0db70f0b.gif);background-repeat:repeat-y;background-size:100% 164px;flex-direction:column;align-items:center;gap:10px;padding:1rem;display:flex;position:relative}.bY0ouG_middleContainer:before{content:"";background-image:url(scroll_top.eb2ec38d.gif);background-position:top;background-repeat:no-repeat;background-size:contain;width:103%;height:50px;position:absolute;top:-11px;left:-1%}.bY0ouG_middleContainer:after{content:"";background-image:url(scroll_bottom.ed84409d.gif);background-position:bottom;background-repeat:no-repeat;background-size:contain;width:103%;height:50px;position:absolute;top:auto;bottom:-11px;left:-1%}@media screen and (min-width:500px){.bY0ouG_middleContainer{padding:2rem 1rem}}._3vGv9a_container{background-color:var(--bg-color);border:2px solid var(--border-color);color:#f5f5f5;flex-wrap:wrap;justify-content:space-evenly;align-items:center;gap:20px;padding:10px;font-size:12px;display:flex}._3vGv9a_container p{margin:0}._3vGv9a_container img{width:50px}._3vGv9a_center{align-items:center;gap:3px;display:flex}.ztywgG_container{gap:10px;margin:10px 0;display:flex}.ztywgG_imgContainer,.ztywgG_textContainer{flex:2}.ztywgG_container a{color:var(--subheader-color);font-weight:700}.ztywgG_date{font-style:italic}.jiMMYa_container{background-color:#000;background-image:url(rsbg.1515c323.jpg);background-position:top;background-repeat:repeat-y;background-size:auto;background-attachment:fixed;flex-direction:column;align-items:center;min-height:100vh;display:flex}.jiMMYa_innerContainer{flex-direction:column;align-items:center;gap:10px;width:100%;margin-bottom:1rem;padding:1rem 2rem;display:flex}.jiMMYa_headerImg{width:90%;max-width:400px;margin-bottom:1rem}h1{color:var(--header-color);text-shadow:1px 1px 1px #000}img{width:100%}.dcaSsW_featuredContainer{width:100%;min-height:325px;display:flex}.dcaSsW_iframe{border:none;flex-grow:1;margin:0;padding:0}.dcaSsW_socialsContainer{gap:1rem;display:flex}.dcaSsW_socialsContainer a{color:var(--subheader-color);align-items:center;gap:5px;display:flex}.dcaSsW_socialsContainer img{width:25px}._5Iz5hq_header{flex-direction:column;align-items:center;display:flex}._5Iz5hq_tableWrapper{max-width:100%;overflow-x:auto}table{border-collapse:separate;border-spacing:20px 0}th{text-align:left;font-weight:600}table a{color:#000;text-decoration:none}table a img{width:15px;margin-right:5px}table a:hover{text-decoration:underline}.L1NTCG_container{width:100%}.L1NTCG_innerContainer{flex-direction:column;align-items:center;gap:15px;margin-bottom:20px;display:flex}.L1NTCG_link{color:var(--subheader-color);font-weight:700}.L1NTCG_canvas{will-change:transform;border-radius:8px;width:100%;height:0;padding-top:75%;padding-bottom:0;position:relative;overflow:hidden;box-shadow:0 2px 8px #3f455129}.L1NTCG_iframe{border:none;width:100%;height:100%;margin:0;padding:0;position:absolute;top:0;left:0}*{box-sizing:border-box}html,body{width:100%;height:100%;margin:0;padding:0}body{background-color:#000;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol}h1,h2,h3,h4,h5,h6,p{margin:8px 0}p{font-size:14px}hr{background-color:var(--border-color);border:0;width:100%;height:1px}:root{--action-color:#90c040;--bg-color:black;--border-color:#382418;--header-color:#6d4211;--subheader-color:#7b4f17}
